--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,8 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3306/banking_system?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/banking_system_test?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=ironhacker
 spring.datasource.password=Ir0nh4ck3r!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
